psao-artifact/data/runs/cluster-backup-2026-09-13T11-20-02Z/raw/peerauthentication.yaml
apiVersion: v1
items:
- apiVersion: security.istio.io/v1
  kind: PeerAuthentication
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"security.istio.io/v1beta1","kind":"PeerAuthentication","metadata":{"annotations":{},"name":"default","namespace":"default"},"spec":{"mtls":{"mode":"STRICT"}}}
    creationTimestamp: "2025-11-17T19:05:05Z"
    generation: 1
    name: default
    namespace: default
    resourceVersion: "17157"
    uid: 4661e916-e2e2-443d-ad48-43dd9792d26a
  spec:
    mtls:
      mode: STRICT
kind: List
metadata:
  resourceVersion: ""
